--- a/style.css
+++ b/style.css
@@ -11,59 +11,101 @@ h1{
     font-size: 48px;
     line-height: 58px;
     display: flex;
-    align-items: center;
-    background-color: #54968a;
+    /* align-items: center; */
+    
+}
 
+#h1-tittle-brush{
+    width: 20vw;
+    margin: 3rem;
+    color: #2E6D62;
+    /* background-color: #8dd4c9; */
+    /* background-color: #54968a;
     color: transparent;
     text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.3);
     -webkit-background-clip: text;
     -moz-background-clip: text;
-    background-clip: text;
+    background-clip: text; */
+}
+button{
+padding: 0;
+border: none;
+background: none;
+
+}
+#about-button{
+    margin: 3rem;
+    margin-top: 5rem;
+    width: 75px;
+    height: 75px;
+    border-radius: 40px;
+    background: #2E6D62;
+    box-shadow: -7px -7px 7px 2px rgba(255, 255, 255, 0.3), 7px 7px 7px 2px rgba(196, 196, 196, 0.39);
+}
+
+#about-button:hover, #about-button:focus {
+    outline: none;
+    background: #8dd4c9;
+}
+
+#about-button h1{
+    justify-content: center;
+    margin: 0px;
+    color: #54968a;
+}
+
+#top-intro{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    height: 22vh;
+    width: 100vw;
 }
 
 #videoSpace {
     position: relative;
     display: flex;
-    width: 50%;
-    height: 50%;
+    width: 60vw;
+    height: 40vh;
     margin: 0 auto;
-    background-color: rgb(192, 236, 200);
+    /* background-color: rgb(192, 236, 200); */
+    max-width: 600px;
+    /* max-height: 400px; */
 }
 
 #videoCanvas {
     box-sizing: border-box;
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     margin: auto;
     background-color: tomato;
     border-radius: 20rem;
+    /* border-radius: 100px; */
 }
 
 
 #timerSpace {
     position: relative;
     display: flex;
-    width: 50%;
-    height: 50%;
-    margin: 0 auto;
-    background-color: #c0ecec;
-    /* background-color: #60c2c2; */
+    width: 50vw;
+    height: 30vh;
+    margin: auto;
+    /* background-color: #c0ecec; */
+    /* background-color: chocolate; */
+
 }
 
 #mouth { 
     position: relative;
     display: flex;
-    /* box-sizing: border-box; */
 
     -moz-box-shadow:    inset 0 0 10px #00000034;
     -webkit-box-shadow: inset 0 0 10px #00000034;
     box-shadow:         inset 0 0 10px #00000034;
 
     margin: auto;
-    /* margin-top: 0px; */
     border-radius: 40px;
     background-color: #D68473;
-    /* width: 80%; */
     width: 400px;
     height: 80px;
     }
@@ -73,13 +115,10 @@ h1{
     justify-content: space-around;
     margin: auto;
     margin-top: 0px;
-    /* width: 80%; */
     width: 300px;
     height: 100%;
 }
 .tooth {
-  
-    /* width: 20%; */
     width: 60px;
     height: 75%;
     border-radius: 0px 0px 20px 20px;
@@ -89,13 +128,33 @@ h1{
 
 #timerCanvas {
     position: absolute;
-    /* position: relative;
-    display: flex;
-    box-sizing: border-box; */
     width: 100%;
     height: 100%;
     margin: auto;
+    border-radius: 40px;
     background-color: transparent;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+#sound-button{
+    position: absolute;
+    bottom: 3rem ;
+    right: 3rem;
+    width: 75px;
+    height: 75px;
+    border-radius: 40px;
+    background: #F8F8F8;
+    box-shadow: -7px -7px 7px 2px rgba(255, 255, 255, 0.3), 7px 7px 7px 2px rgba(196, 196, 196, 0.39);
+}
+
+#sound-button:hover, #sound-button:focus {
+    outline: none;
+    background: #8dd4c9;
+    /* background: #2E6D62; */
+}
+#sound-button h1{
+    justify-content: center;
+    margin: 0px;
+    color: #54968a;
+}
 
