--- a/style.css
+++ b/style.css
@@ -3,7 +3,26 @@
 body {
 background-color: #c0ecec;
 font-family: 'Inter', sans-serif;
+
+
+max-width: 1000px;
+margin: auto;
+/* border: 1px solid rgb(12, 12, 61); */
+
+/* height */
+height: 100vh;
+height: -webkit-fill-available;
+height: fill-available;
+position: relative;
+
 }
+
+/* #wrapper{
+    margin: auto;
+    background-color: #8dd4c9;
+    width: 1000px;
+    height: auto;
+} */
 
 h1{
     font-style: normal;
@@ -55,6 +74,9 @@ background: none;
 }
 
 #top-intro{
+    max-width: 1000px;
+    margin: auto;
+    /* background-color: #D68473; */
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -92,36 +114,61 @@ background: none;
     margin: auto;
     /* background-color: #c0ecec; */
     /* background-color: chocolate; */
+}
 
+#startShow{
+position: absolute;
+margin: auto;
+top: 40%;
+left: 40%;
+color: #8dd4c9;
+/* background-color: aquamarine; */
+}
+#startShow:hover{
+    color: #d4d28d;
+    cursor: pointer;
+}
+#startShow:active{
+    color: #d4d28d;
 }
 
 #mouth { 
     position: relative;
     display: flex;
-
     -moz-box-shadow:    inset 0 0 10px #00000034;
     -webkit-box-shadow: inset 0 0 10px #00000034;
     box-shadow:         inset 0 0 10px #00000034;
-
     margin: auto;
     border-radius: 40px;
     background-color: #D68473;
     width: 400px;
     height: 80px;
-    }
+}
+#mouth:hover{
+    cursor: pointer;
+    -moz-box-shadow:    10px 10px 10px #00000034;
+    -webkit-box-shadow: 10px 10px 10px #00000034;
+    box-shadow:         10px 10px 10px #00000034;
+}
+
 #teeth {
     display: flex;
     position: relative;
     justify-content: space-around;
-    margin: auto;
+    justify-content: center;
+    left:50px;
+    /* margin: auto; */
     margin-top: 0px;
     width: 300px;
+    /* background-color: #F8F8F8; */
     height: 100%;
 }
 .tooth {
     width: 60px;
     height: 75%;
-    border-radius: 0px 0px 20px 20px;
+    padding-left: 1rem;
+    margin-left: .50rem;
+    border-radius: 0px 0px 30px 30px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -143,6 +190,7 @@ background: none;
     width: 75px;
     height: 75px;
     border-radius: 40px;
+    border: 5px solid #54968a;
     background: #F8F8F8;
     box-shadow: -7px -7px 7px 2px rgba(255, 255, 255, 0.3), 7px 7px 7px 2px rgba(196, 196, 196, 0.39);
 }
