--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body {
-background-color: #c0ecec;
+background-color: #CCE7E3;
 font-family: 'Inter', sans-serif;
 font-weight: 300;
 font-size: 14px;
@@ -139,18 +139,18 @@ background: none;
     position: fixed;
     left: 50%;
     transform: translate(-50%, 0);
-    top:70vh;
+    top:69vh;
    
 color: #8dd4c9;
 /* background-color: aquamarine; */
 }
 
 #startShow:hover{
-    color: #d4d28d;
+    color: #F5C451;
     cursor: pointer;
 }
 #startShow:active{
-    color: #d4d28d;
+    color: #D68473;
 }
 
 #mouth { 
@@ -234,6 +234,14 @@ color: #8dd4c9;
     font-weight: 300;
 }
 
+.wrapper-main-section-content{
+    background-color: #ABD3CA;
+}
+.wrapper-main-section-content:hover{
+    transition: .50s;
+        /* background-color:#F5C451; */
+    }
+
 #main-section{
     display: flex;
     position: relative;
@@ -245,23 +253,23 @@ color: #8dd4c9;
 }
 
 .main-section-content-1{
-    width: 30%;
+    width: 25%;
     height: 350px;
-    background-color: #ABD3CA;
+    /* background-color: #ABD3CA; */
     float:left;
 }
 
-.main-section-content-1:hover{
+/* .main-section-content-1:hover{
 transition: .50s;
     background-color: rgb(201, 247, 237);
-    /* background-color: #F5C451; */
     box-shadow: 7px 7px 7px 5px rgba(196, 196, 196, 0.42);
-}
+} */
 
 .main-section-content{
-    width: 23.33%;
+    width: 25%;
+    height: auto;
     height: 350px;
-    /* background-color: #ABD3CA; */
+    background-color: #ABD3CA;
     float:left;
 }
 .hover-text{
@@ -269,30 +277,39 @@ transition: .50s;
     position: absolute;
     float: left;
     margin: auto;
-    width: 23.33%;
+    width: 25%;
     height: 350px;
     background-color:transparent;
 }
 .hover-text h2{
-    padding: 1rem;
-    padding-top: 4rem;
-    font-size: 2rem;
+    padding: 3rem;
+    font-size: 2.5rem;
     color: transparent;
 }
 .hover-text:hover{
-    background-color:rgba(46, 109, 98,0.9);
-    transition: 1s;
+    /* background-color:rgba(46, 109, 98,0.9); */
+    /* background-color: rgb(235, 179, 49); */
+    background-color: rgb(171, 212, 203);
+    transition: .50s;
 }
 .hover-text:hover h2 {
 
-    color: rgb(248, 250, 248);
+    /* color: rgb(0, 0, 0); */
+    color: #2E6D62;
+    padding-top: 2.5rem;
+    background-color: #54968a;
+    color: transparent;
+    text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.3);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
 } 
 
 .main-section-content-1 h1{
     width: 20vw;
     margin: 3rem;
     color: #2E6D62;
-    /* background-color: #8dd4c9; */
+    padding-top: 2.5rem;
     background-color: #54968a;
     color: transparent;
     text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.3);
@@ -300,8 +317,39 @@ transition: .50s;
     -moz-background-clip: text;
     background-clip: text;
 }
+
+.main-section-content-1:hover h1{
+    width: 20vw;
+    margin: 3rem;
+    color: rgb(0, 53, 44);
+    padding-top: 2.5rem;
+    background-color: #037f94;
+    color: transparent;
+    text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.3);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+}
 .rules-img{
-    width: 100%;
+    width: 70%;
+    height:auto;
+    margin-left: 15%;
+}
+
+
+
+#back-1{
+background-color: #F9E4DC;
+height: 350px;
+
+}
+#back-2{
+    /* background-color: #ABD3CA; */
+    background-color: #2E6D62;
+    height: 350px;
+}
+#back-3{
+    background-color: #CF775F;
     height: 350px;
 }
 #instructions{
